[package]
name = "hotel-broken-image-checker"
version = "0.1.0"
edition = "2021"
description = "High-performance CLI tool to detect and clean broken image URLs from PostgreSQL databases"
authors = ["Dijitech Team"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
indicatif = "0.18.3"
csv = "1.4.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
futures = "0.3.31"
urlencoding = "2.1.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.23.0"
